Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazon-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amazon
  template:
    metadata:
      labels:
        app: amazon
    spec:
      containers:
      - name: amazon
        image: adiii007/amazon:latest
         imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
             cpu: "100m"
