Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amazon-service
spec:
  selector:
    app: amazon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
       type: LoadBalancer
