ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
spec:
  rules:
  - http:
      paths:
      - path: /amazon
        pathType: Prefix
        backend:
          service:
            name: amazon-service
            port:
              number: 80
      - path: /flipkart
        pathType: Prefix
        backend:
          service:
            name: flipkart-service
            port:
              number: 80
      - path: /myntra
        pathType: Prefix
        backend:
          service:
            name: myntra-service
            port:
              number: 80
